Fix misalignment of table head/body; link uri tweaks
I think space-delimited should be safe, too

--- a/js/main.css
+++ b/js/main.css
@@ -53,3 +53,7 @@ span.units {
   font-size: small;
   font-weight: normal;
 }
+table#tcat {
+  /* fix incorrect centering of datatables body content */
+  margin: 0;
+}
